--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "cross-env": "^5.1.3",
     "eslint": "^4.12.1",
     "eslint-plugin-mocha": "^4.11.0",
+    "git-contributor": "^1.0.8",
     "macaca-cli": "^2.0.12",
     "macaca-coverage": "^1.0.0",
     "macaca-electron": "^1.1.17",
@@ -38,8 +39,9 @@
     "dev:test": "cross-env NODE_ENV=test webpack-dev-server",
     "lint": "eslint --fix .",
     "serve": "npm run dev:test &",
-    "test": "macaca run -d ./test --reporter macaca-reporter",
+    "test": "macaca run -d ./test",
     "prepublish": "npm run build",
+    "contributor": "git-contributor",
     "build": "cross-env NODE_ENV=production webpack -p",
     "ci": "npm run lint && npm run serve && npm run test"
   },
